--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.gusdb</groupId>
     <artifactId>wsf</artifactId>
     <version>1.0.0</version>
   </parent>
-  
+
   <name>Web Service Framework: Service</name>
   <artifactId>wsf-service</artifactId>
   <packaging>jar</packaging>
@@ -52,8 +52,8 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
 
