--- a/MockPlugin/pom.xml
+++ b/MockPlugin/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
   </dependencies>
 </project>
