--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -34,6 +34,11 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-server</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>org.glassfish.jersey.containers</groupId>
