--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="WSF" default="WSF-Installation" basedir=".">
+<project name="WSF" basedir=".">
 
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo  Installation  oooooooooooooooooooooooooo -->
@@ -73,16 +73,6 @@
 
     <antcall target="createLibLink" />
     <antcall target="createConfigLink" />
-    <!--
-        <antcall target="copyWebXml" />
-    -->
-
-    <!-- copy the log4j.properties to webapp's classes, if necessary -->
-    <available file="${webappTargetDir}/WEB-INF/classes/log4j.xml"
-               property="log4j.webconfig.exist" />
-    <!--
-        <antcall target="copyLog4jWebconfig" />
-    -->
 
     <!-- use default context.xml, if it does not exist -->
     <available file="${targetDir}/config/context.xml"
@@ -91,28 +81,20 @@
 
   </target>
 
-
   <target name="WSF/Service-WebInstallation" depends="WSF/Service-Installation">
-
     <ant target="defaultWebComponentInstall">
       <property name="project" value="WSF" />
       <property name="component" value="Service" />
     </ant>
-
   </target>
-
 
   <!-- oooooooooooooooooooooooo  Web Installation  oooooooooooooooooooooooo -->
 
-
   <target name="verifyWebPropFile">
-
-    <fail unless="webappTargetDir">The 'webappTargetDir' is missing from the web
-      property file. Example: /usr/local/tomcat/webapps/axis
+    <fail unless="webappTargetDir">
+    	The 'webappTargetDir' is missing from the web property file.
     </fail>
-
   </target>
-
 
   <target name="createLibLink" unless="lib.exist">
     <ant target="symlink">
@@ -129,26 +111,9 @@
     </ant>
   </target>
 
-
   <target name="copyWebXml" unless="web.xml.exist">
     <copy file="${webappTargetDir}/WEB-INF/wsf-web.xml"
           toFile="${webappTargetDir}/WEB-INF/web.xml" />
-  </target>
-
-
-  <target name="copyLog4jWebconfig" unless="log4j.webconfig.exist">
-    <copy file="${targetDir}/config/log4j.xml"
-          toDir="${webappTargetDir}/WEB-INF/classes" />
-  </target>
-
-  <target name="copyContextXml" unless="context.xml.exist">
-    <!-- No longer needed
-    <filter token="targetDir" value="${targetDir}" />
-    <filter token="webappTargetDir" value="${webappTargetDir}" />
-    <copy file="${targetDir}/config/wsf-context.xml.sample"
-          toFile="${targetDir}/config/wsf-context.xml"
-          filtering="true" />
-    -->
   </target>
 
 </project>
