--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -71,6 +71,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 </project>
